Use UTF-8 characters witout masking them when generating HTML

BUG: 452458